--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,10 @@
 /*Normalización*/
 
+
+/*Variables*/
+
+
+
 /*Globales*/
 body {
     font-family: "Krub", sans-serif;
@@ -9,8 +14,8 @@ body {
 
 /*Header*/
 .logo {
-    margin-top: 20px;
-    margin-left: 50px;
+    padding-top: 10px;
+    margin-left: 10px;
     width: 10%;
 }
 
@@ -18,9 +23,26 @@ body {
 /*Main*/
 .contenedor {
     display: flex;
-    justify-content: space-around;
-    margin-top: 10px;
+    margin-bottom: 50px;
+    margin-left: 80px;
 }
+
+.textarea_1 {
+    border: none;
+    color: #0A3871;
+    margin-top: 90px;
+}
+
+/* Quitar el borde y el resplandor de enfoque del textarea */
+textarea:focus {
+    outline: none;
+    box-shadow: none;
+}
+
+::placeholder {
+    color: #0A3871;
+}
+
 
 
 /*Footer*/
