Tercer commit: Trabajando botones

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,19 @@
 /*Normalización*/
-
+* {
+    margin: 0;
+    
+}
 
 /*Variables*/
 
 
 
 /*Globales*/
-body {
+html {
     font-family: "Krub", sans-serif;
     font-weight: 400;
     font-style: normal;
+    background-color: #F3F5FC;
 }
 
 /*Header*/
@@ -21,19 +25,32 @@ body {
 
 
 /*Main*/
-.contenedor {
+main {
     display: flex;
     margin-bottom: 50px;
     margin-left: 80px;
 }
 
-.textarea_1 {
-    border: none;
-    color: #0A3871;
-    margin-top: 90px;
+.aviso {
+    display: flex;
 }
 
-/* Quitar el borde y el resplandor de enfoque del textarea */
+.aviso h6 {
+    margin-left: 10px;
+}
+
+.textarea_1 {
+    background-color: #F3F5FC;
+    border: none;
+    border-radius: 10px;
+    color: #0A3871;
+    margin-top: 90px;
+    text-transform: lowercase;
+    width: 100%;
+    overflow: hidden;
+    resize: none;
+}
+
 textarea:focus {
     outline: none;
     box-shadow: none;
@@ -43,6 +60,59 @@ textarea:focus {
     color: #0A3871;
 }
 
+.botones {
+    display: flex;
+    margin-top: 20px;
+
+}
+
+.btn-encriptar {
+    background-color: #0A3871;
+    border: 1px solid   #0A3871;
+    color: white;
+    border-radius: 24px;
+    cursor: pointer;
+    height: 60px;
+    width: 300px;
+}
+
+.btn-desencriptar {
+    background-color: #D8DFE8;
+    border: 1px solid #0A3871;
+    color: #0A3871;
+    border-radius: 24px;
+    cursor: pointer;
+    height: 60px;
+    width: 300px;
+    margin-left: 40px;
+}
+
+.textarea_2 {
+    background: white;
+    background-image: url("/img/Muñeco.svg");
+    background-repeat: no-repeat;
+    border: none;
+    border-radius: 24px;
+    color: #0A3871;
+    margin-left: 98px;
+    margin-top: 20px;
+    padding-left: 20px;
+    position: fixed;
+}
+
+.btn-copiar {
+    background-color: #D8DFE8;
+    border: 1px solid #0A3871;
+    color: #0A3871;
+    border-radius: 24px;
+    cursor: pointer;
+    height: 60px;
+    width: 200px;
+    margin-left: 200px;
+    margin-top: 402px;
+    position: absolute;
+
+}
 
 
 /*Footer*/
